--- a/ProjetoGame.csproj
+++ b/ProjetoGame.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\imagens\fortinite.jpg" />
     <Content Remove="wwwroot\imagens\imagem isnta.jpg" />
     <Content Remove="wwwroot\imagens\images.jpg" />
     <Content Remove="wwwroot\imagens\images2.jpg" />
